# stable-diffusion-api

./: .env  .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  colab_runner.ipynb  conftest.py  docker-compose.yaml  openapi.yml  pyproject.toml
.github/workflows/: ci.yaml
deployment/: redis.conf  run_redis_app.sh  run_redis_worker.sh  run_tests.sh
stable_diffusion_api/api/: base.py  in_memory_app.py  redis_app.py
stable_diffusion_api/api/tests/: base.py  test_e2e.py  test_in_memory_app.py  test_redis_app.py
stable_diffusion_api/engine/: utils.py
stable_diffusion_api/engine/repos/: blob_repo.py  key_value_repo.py  messaging_repo.py  user_repo.py
stable_diffusion_api/engine/services/: event_service.py  runner_service.py  status_service.py  task_service.py
stable_diffusion_api/engine/workers/: in_memory_worker.py  redis_worker.py  utils.py
stable_diffusion_api/models/: blob.py  events.py  params.py  results.py  task.py
stable_diffusion_server/api/: base.py  in_memory_app.py  redis_app.py
stable_diffusion_server/api/tests/: base.py  test_e2e.py  test_in_memory_app.py  test_redis_app.py  utils.py
stable_diffusion_server/api/utils/: pyfa_converter.py
stable_diffusion_server/engine/: utils.py
stable_diffusion_server/engine/repos/: blob_repo.py  key_value_repo.py  messaging_repo.py  user_repo.py
stable_diffusion_server/engine/services/: event_service.py  runner_service.py  status_service.py  task_service.py
stable_diffusion_server/models/: blob.py  events.py  image.py  model.py  params.py  results.py  task.py  user.py
(+4 files in other folders)
